# SystemLens

./: .gitignore  README.md  pyproject.toml  requirements.txt  systemlens.spec
docs/: packaging.md
scripts/: build_macos.sh  build_windows.ps1  generate_cert.ps1
services/macos/: com.systemlens.plist
services/systemd/: systemlens.service
services/windows/: systemlens.xml
src/systemlens/: __main__.py  config.py  logging_config.py  security.py  utils.py
src/systemlens/agent/: __init__.py  collector.py  sampler.py
src/systemlens/agent/sensors/: __init__.py  battery.py  cpu.py  disk.py  gpu.py  memory.py  network.py  processes.py  system.py  thermal.py
src/systemlens/analytics/: __init__.py  battery.py
src/systemlens/api/: __init__.py  app.py  schemas.py
src/systemlens/detection/: __init__.py  anomaly.py  baseline.py  rules.py
src/systemlens/reports/: __init__.py  generator.py
src/systemlens/storage/: __init__.py  db.py  models.py
src/systemlens/web/: app.js  index.html  manifest.json  styles.css  sw.js
src/systemlens/workflows/: __init__.py  actions.py  models.py
tests/: test_anomaly.py  test_storage.py
