[project]
name = "systemlens"
version = "0.1.0"
description = "Local performance and reliability companion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "psutil>=5.9",
  "nvidia-ml-py>=12.0.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "aiosqlite>=0.20"
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
systemlens = "systemlens.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
systemlens = ["web/*"]
